styles.css
body{
    background-color: rgb(18, 18, 18);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
    gap: 6px;
    padding: 10px;
    font-weight: bold;
}

#gameContainer{
    display: grid;
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: repeat(5, 1fr);
    gap: 4px;
    width: 300px; 
    font-size: 32px;
    margin: 10px;
}

#keyboard{
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    width: 484px;
    gap: 6px;
    height: 184px;
    font-size: 20px;
}

.keyboardRow{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 6px;
}

.keyboardBox{
    background-color: rgb(130, 131, 133);
    display: flex;
    justify-content: center;   
    align-items: center;
    width: 43px;
    height: 100%;
    border-radius: 5px;
    user-select: none; 
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -ms-user-select: none;
}

.keyboardBox:hover{
    cursor: pointer;
}

.keyboardBox.correctLetter{
    background-color: rgb(181, 159, 58);
}

.keyboardBox.correctSpot{
    background-color: rgb(82, 141, 77);
}

.keyboardBox.incorrectLetter{
    background-color: rgb(58, 58, 58);
}

.letterBox.correctLetter{
    --background-color: rgb(181, 159, 58);
    --border: 2px solid rgb(181, 159, 58);
    animation: flip 0.8s ease forwards;
}

.letterBox.correctSpot{
    --background-color: rgb(82, 141, 77);
    --border: 2px solid rgb(82, 141, 77);
    animation: flip 0.8s ease forwards;
}

.letterBox.incorrectLetter{
    --background-color: rgb(58, 58, 58);
    --border: 2px solid rgb(58, 58, 58);
    animation: flip 0.8s ease forwards;
}

.letterBox{
    border: 2px solid rgb(58, 58, 58);
    aspect-ratio: 1/1;
    display: flex;
    justify-content: center;   
    align-items: center;
    user-select: none; 
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -ms-user-select: none;
}

.candidate{
    animation: slam 0.1s ease-in-out forwards;
}

.specialKey{
    width: 64px;
    font-size: 12px;
}

svg{
    width: 20px;
    height: 20px;
    fill: white;
    pointer-events: none;
}

@keyframes flip{
    0% {
        transform: rotateX(0deg);
        background-color: rgb(18, 18, 18);
        border: 2px solid rgb(88, 88, 88);
    }

    45%{
        transform: rotateX(90deg);
        background-color: rgb(18, 18, 18);
        border: 2px solid rgb(88, 88, 88);
    }

    55%{
        transform: rotateX(90deg);
        background-color: var(--background-color);
        border: 2px solid var(--border);
    }

    100%{
        transform: rotateX(0deg);
        background-color: var(--background-color);
        border: 2px solid var(--border);
    }

}

@keyframes slam{
    0%{
        transform: scale(1);
        border: 2px solid rgb(58, 58, 58);
    }

    50%{
        transform: scale(1.12);
        border: 2px solid rgb(88, 88, 88);
    }

    100%{
        transform: scale(1);
        border: 2px solid rgb(88, 88, 88);
    }
}

#gameContainer > :nth-child(5n + 2).filled{
    animation-delay: .3s;
}

#gameContainer > :nth-child(5n + 3).filled{
    animation-delay: .5s;
}

#gameContainer > :nth-child(5n + 4).filled{
    animation-delay: .7s;
}

#gameContainer > :nth-child(5n + 5).filled{
    animation-delay: .9s;
}

.errorBox{
    padding: 8px;
    font-size: 18px;
    background-color: white;
    color: black;
    border-radius: 5px;    
}

#errorList{
    position: fixed;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    gap: 12px;
    top: 5%;
}

@media screen and (max-width: 484px) {
    #keyboard{
        width: 100vw;
    }
    .keyboardBox{
        width: 8vw;
    }
    .specialKey{
        width: 12vw;
    }
}

@media screen and (max-width: 300px) {
    #gameContainer{
        width: 100vw;
    }
}

